reconfigure url & base_url.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Untitled Pages Theme
 description: A Simple & Functional GitHub Pages Theme
-url: https://swashdev.github.io/untitled-pages-theme
+url: https://swashdev.github.io
+base_url: /untitled-pages-theme
